Fix more than 60 problems with src